--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
 <section class="search-results">
     <h2 class="heading">search results for <span>product</span>
     </h2>
-    <div class="product-container product-container-grid">
+    <div class="product-container product-container-grid" id="product-list">
 
         <div class="product-card">
             <div class="product-image">
@@ -42,11 +42,12 @@
                 <img src="img/producto01.jpg" alt="" class="product-thumb">
                 <button class="card-btn">add to wishlist</button>
             </div>
+
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">playera</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$90</span>
+                <span class="actual-price">$200</span>
             </div>
         </div>
 
@@ -57,10 +58,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">saco</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$670</span>
+                <span class="actual-price">$890</span>
             </div>
         </div>
 
@@ -71,10 +72,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">sueter</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$380</span>
+                <span class="actual-price">$460</span>
             </div>
         </div>
 
@@ -85,10 +86,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">playera</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$280</span>
+                <span class="actual-price">$440</span>
             </div>
         </div>
 
@@ -99,10 +100,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">sueter</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$300</span>
+                <span class="actual-price">$500</span>
             </div>
         </div>
 
@@ -113,10 +114,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">playera</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$100</span>
+                <span class="actual-price">$120</span>
             </div>
         </div>
 
@@ -127,10 +128,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">saco</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$800</span>
+                <span class="actual-price">$920</span>
             </div>
         </div>
 
@@ -141,10 +142,10 @@
                 <button class="card-btn">add to wishlist</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">brand</h2>
+                <h2 class="product-brand">sueter</h2>
                 <p class="product-short-des">Lorem ipsum dolor sit</p>
-                <span class="price">$20</span>
-                <span class="actual-price">$40</span>
+                <span class="price">$200</span>
+                <span class="actual-price">$250</span>
             </div>
         </div>
     </div>
@@ -153,6 +154,7 @@
 <footer></footer>
     <script src="js/footer.js" type=""> </script>
     <script src="js/nav.js" type=""> </script>
+    <script src="js/search.js" type=""> </script>
 </body>
 
 </html>
