--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
         </div>
 
+        <!--   BARRA DE CATEGORÍAS DE PRODUCTO -->    
         <ul class="links-container">
             <li class="link-item"><a href="/index.html" class="link">Home</a></li>
             <li class="link-item"><a href="#" class="link">Women</a></li>
@@ -77,7 +78,6 @@
                 <h2 class="product-title"></h2>
                 <span class="price"></span>
             </div>
-
     </template>
 
 
@@ -106,8 +106,6 @@
                     <li><a href="" class="footer-link">sweatshirts</a></li>
                 </ul>
             </div>
-
-
 
         </div>
         <p class="footer-title">About</p>
