--- a/sections/product01.html
+++ b/sections/product01.html
@@ -47,7 +47,7 @@
                 </a>
             </div>
         </div>
-
+        <!--   BARRA DE CATEGORÍAS DE PRODUCTO -->   
         <ul class="links-container">
             <li class="link-item"><a href="/index.html" class="link">Home</a></li>
             <li class="link-item"><a href="#" class="link">Women</a></li>
